# aiogram-template

./: .env_example  main.py  pyproject.toml
core/: bootstrap.py  config.py
database/: connect.py
database/models/: __init__.py  user.py
handler/: start.py
middleware/: register.py
utils/: client.py
