[project]
name = "aiogram-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Sattorbek",email = "sattorpro@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "tortoise-orm (>=0.25.1,<0.26.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
